[package]
name = "one"
version = "0.2.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
ratatui = "0.28.1"
crossterm = "0.28.1"
num-format = "0.4.4"
chrono = "0.4.38"
unicode-width = "0.2"
num = "0.4.3"